--- a/style.css
+++ b/style.css
@@ -1,39 +1,45 @@
 /* ブラウザがそれぞれ持っているCSSをリセットするための記述 */
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-.header{
-  width: 100%; /* 横幅いっぱい */
-  height: 120px; /* 高さ120px */
-  background-color: red; /* 背景色red */
+header {
+  width: 90%; /* 横幅90% */
+  padding: 15px 0;
+  margin: 0 auto;
+  text-align: center;
 }
 
-.header-top{
-  width: 100%; /* 横幅いっぱい */
-  height: 70px; /* 高さ100px */
-  background-color: hotpink; /* 背景色hotpink */
+header .heading { /* headerタグ内のheadingクラスにのみ反映される */
+  font-size: 32px;
 }
 
-.header-bottom {
-  width: 100%; /* 横幅いっぱい */
-  height: 100px; /* 高さ100px */
-  background-color: pink; /* 背景色pink */
+.nav-list {
+  text-align: center;
+  padding: 10px 0;
+  margin: 0 auto;
 }
 
-.main-visual{
-  width: 100%; /* 横幅いっぱい */
-  height: 300px; /* 高さ300px*/
-  background-color: orange; /* 背景色orange */
+.nav-list-item {
+  list-style: none;
+  display: inline-block;
+  margin: 0 20px;
 }
 
-.main{
+.main-visual {
+  width: 100%; /* 横幅いっぱい */
+  height: 300px; /* 高さ300px */
+}
+
+.main-visual-content {
+  width: 350px; /* 横幅350px */
+  height: 300px; /* 親の高さに揃える */
+}
+
+.main {
   width: 840px; /* 横幅840px */
-  /* background-color, heightの指定を解除 */
-  height: 1400px; /* 高さ1400px(多めに設定) */
-  background-color: green; /* 背景色green */
   display: flex; /* Flexboxの利用 */
   justify-content: center; /* 子要素の横並び・中央寄せ */
   margin: 0 auto; /* 中央寄せ（左右に余白がないとできない） */
@@ -42,23 +48,14 @@
 .blog {
   width: 600px; /* 横幅600px */
   height: 1400px; /* 高さ1400px */
-  background-color: limegreen; /* 背景色limegreen */
 }
 
 .sidebar {
   width: 240px; /* 横幅240px */
   height: 1400px; /* 高さ1400px */
-  background-color: palegreen; /* 背景色palegreen */
 }
 
-.main-visual-content {
-  width: 350px; /* 横幅350px */
-  height: 300px; /* 親の高さに揃える */
-  background-color: gold; /* 背景色gold */
-}
-
-.footer{
-  widht: 100%; /* 横幅いっぱい */
+footer {
+  width: 100%; /* 横幅いっぱい */
   height: 120px; /* 高さ120px */
-  background-color: blue; /* 背景色blue */
 }
