--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: #6c6b6b;
+}
+
+a {
+  text-decoration: none;
 }
 
 header {
@@ -41,7 +46,7 @@ header .heading { /* headerタグ内のheadingクラスにのみ反映される 
 .main {
   width: 840px; /* 横幅840px */
   display: flex; /* Flexboxの利用 */
-  justify-content: center; /* 子要素の横並び・中央寄せ */
+  justify-content: center; /* 要素の横並び・中央寄せ */
   margin: 0 auto; /* 中央寄せ（左右に余白がないとできない） */
 }
 
@@ -56,6 +61,13 @@ header .heading { /* headerタグ内のheadingクラスにのみ反映される 
 }
 
 footer {
-  width: 100%; /* 横幅いっぱい */
-  height: 120px; /* 高さ120px */
+  width: 100%;
+  height: 120px;
+  text-align: center;
+  line-height: 120px;
+  background-color: #848282;
+}
+
+.footer-text {
+  color: #fff;
 }
