--- a/style.css
+++ b/style.css
@@ -116,6 +116,21 @@ main {
   font-size: 11px;
 }
 
+.pagination {
+  text-align: center;
+  padding-top: 50px;
+}
+
+.pagination p {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  margin: 0 5px;
+  color: #fff;
+  background-color: #acabab;
+  border-radius: 3px;
+  line-height: 30px;
+}
 .sidebar {
   width: 230px;
 }
@@ -136,7 +151,6 @@ main {
   border-bottom: 1px solid #f7f7f7;
   margin-bottom: 5px;
 }
-
 .popular-text:last-child,
 .categories-text:last-child {
   margin: 0;
@@ -184,6 +198,7 @@ main {
 .instagram-box:nth-child(6) {
   background-image: url(img/road.jpg);
 }
+
 footer {
   width: 100%;
   height: 120px;
